--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="video-overlay">
       <button id="close-video">X</button>
       <video id="intro-video" autoplay muted playsinline>
-        <source src="zz-intro.mp4" type="video/mp4" />
+        <source src="intro.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
     </div>
