did way too many things to count

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Your Site Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="blog.css">
     <script type="importmap">
       {
         "imports": {
@@ -41,12 +41,12 @@
         <li><a href="booking.html">BOOKING</a></li>
       </ul>
     </nav>
+    
 
-    <!-- Text Overlay --> -->
-   <div id="text-overlay">
-     <h1>ABOUT</h1>
-     <p>Zaida Zane is an Atlanta-based artist, underground DJ, and producer known for blending an eclectic mix of genres into a sound that’s distinct and impactful. Her music seamlessly integrates 90s house, West African rhythms, UK bass, UK funky, and Southern bass, creating a percussive and dance floor-oriented experience. Tracks like “Fly By” (Nightslugs) and “I Wanna” (Nervous Records) are prime examples of her dynamic sound. Zaida’s genre-spanning influences are also evident in her DJ sets, which have been featured on Rinse, NTS, Dublab, and Reprezent Radio. With a growing presence on the international stage, Zaida has performed in several countries, consistently pushing the boundaries of underground music.</p>
-    </div> -->
+    <!-- Text Overlay -->
+    <div id="text">
+     <h1>ZZ Planet</h1>
+    </div>
 
     <!-- Three.js Canvas for the Rotating Logo -->
    <div>
