improving animation and cube position

--- a/booking.html
+++ b/booking.html
@@ -14,6 +14,8 @@
     </script>
   </head>
   <body>
+    <div id="bg-container" style="background-image: url('Still-04.png');"></div>
+
     <div class="container">
       <canvas id="three-canvas"></canvas>
   </div>
@@ -28,15 +30,12 @@
     </div>
     -->
 
-    <!-- DOM Background Container -->
-    <div id="bg-container"></div>
-
     <!-- Navigation Menu -->
     <nav id="menu">
       <ul>
         <li><a href="music.html">MUSIC</a></li>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="dates.html">DATES</a></li>
+        <li><a href="https://ra.co/dj/zaidazane">DATES</a></li>
         <li><a href="blog.html">BLOG</a></li>
         <li><a href="booking.html">BOOKING</a></li>
       </ul>
@@ -54,7 +53,7 @@
   </div>
 
 
-    <!-- Main JavaScript -->
-    <script type="module" src="main.js"></script>
+    <!-- Our main JavaScript (as a module) -->
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
