--- a/index.html
+++ b/index.html
@@ -28,15 +28,18 @@
     </div>
     -->
 
-    <!-- DOM Background Container -->
-    <div id="bg-container"></div>
+<!-- 🎥 Background Video (Fixed Size) -->
+<video id="background-video" autoplay loop muted playsinline>
+  <source src="zz-2025.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
 
     <!-- Navigation Menu -->
     <nav id="menu">
       <ul>
         <li><a href="music.html">MUSIC</a></li>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="dates.html">DATES</a></li>
+        <li><a href="https://ra.co/dj/zaidazane">DATES</a></li>
         <li><a href="blog.html">BLOG</a></li>
         <li><a href="booking.html">BOOKING</a></li>
       </ul>
