--- a/music.html
+++ b/music.html
@@ -19,15 +19,15 @@
         <canvas id="three-canvas"></canvas>
     </div>
     <!-- 🏞️ Background -->
-    <!-- DOM Background Container -->
-    <div id="bg-container"></div>
+    <div id="bg-container" style="background-image: url('Still-01.png');"></div>
+
 
     <!-- Navigation Menu -->
     <nav id="menu">
       <ul>
         <li><a href="music.html">MUSIC</a></li>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="dates.html">DATES</a></li>
+        <li><a href="https://ra.co/dj/zaidazane">DATES</a></li>
         <li><a href="blog.html">BLOG</a></li>
         <li><a href="booking.html">BOOKING</a></li>
       </ul>
@@ -49,6 +49,6 @@
         <iframe src="https://ffm.to/ns043" width="20%" height="600px" frameborder="0" allowfullscreen></iframe>
     </section>
         <!-- Main JavaScript -->
-        <script type="module" src="main.js"></script>
+        <script type="module" src="./main.js"></script>
 </body>
 </html>
