--- a/blog.html
+++ b/blog.html
@@ -28,15 +28,15 @@
     </div>
     -->
 
-    <!-- DOM Background Container -->
-    <div id="bg-container"></div>
+    <div id="bg-container" style="background-image: url('Still-05.png');"></div>
+
 
     <!-- Navigation Menu -->
     <nav id="menu">
       <ul>
         <li><a href="music.html">MUSIC</a></li>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="dates.html">DATES</a></li>
+        <li><a href="https://ra.co/dj/zaidazane">DATES</a></li>
         <li><a href="blog.html">BLOG</a></li>
         <li><a href="booking.html">BOOKING</a></li>
       </ul>
@@ -54,7 +54,7 @@
   </div>
     
 
-    <!-- Main JavaScript -->
-    <script type="module" src="main.js"></script>
+    <!-- Our main JavaScript (as a module) -->
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
