--- a/index.html
+++ b/index.html
@@ -14,50 +14,38 @@
     </script>
   </head>
   <body>
-    <div class="container">
-      <canvas id="three-canvas"></canvas>
-  </div>
-    <!-- Video Overlay (auto-plays on first load) -->
-    <!-- 
-    <div id="video-overlay">
-      <button id="close-video">X</button>
-      <video id="intro-video" autoplay muted playsinline>
-        <source src="intro.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-    </div>
-    -->
-
 <!-- 🎥 Background Video (Fixed Size) -->
 <video id="background-video" autoplay loop muted playsinline>
   <source src="zz-2025.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
+
     <!-- Navigation Menu -->
     <nav id="menu">
       <ul>
-        <li><a href="music.html">MUSIC</a></li>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="https://ra.co/dj/zaidazane">DATES</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="booking.html">BOOKING</a></li>
+        <li data-key="MUSIC"><a href="music.html">MUSIC</a></li>
+        <li data-key="HOME"><a href="index.html">HOME</a></li>
+        <li data-key="DATES"><a href="https://ra.co/dj/zaidazane">DATES</a></li>
+        <li data-key="BLOG"><a href="blog.html">BLOG</a></li>
+        <li data-key="BOOKING"><a href="booking.html">BOOKING</a></li>
       </ul>
     </nav>
 
-    <!-- Text Overlay --> -->
-   <div id="text-overlay">
-     <h1>ABOUT</h1>
-     <p>Zaida Zane is an Atlanta-based artist, underground DJ, and producer known for blending an eclectic mix of genres into a sound that’s distinct and impactful. Her music seamlessly integrates 90s house, West African rhythms, UK bass, UK funky, and Southern bass, creating a percussive and dance floor-oriented experience. Tracks like “Fly By” (Nightslugs) and “I Wanna” (Nervous Records) are prime examples of her dynamic sound. Zaida’s genre-spanning influences are also evident in her DJ sets, which have been featured on Rinse, NTS, Dublab, and Reprezent Radio. With a growing presence on the international stage, Zaida has performed in several countries, consistently pushing the boundaries of underground music.</p>
-    </div> -->
+    <!-- Text Overlay -->
+    <div id="text-overlay">
+      <h1>ABOUT</h1>
+      <p>
+        Zaida Zane is an Atlanta-based artist, underground DJ, and producer known for blending an eclectic mix of genres into a sound that’s distinct and impactful. Her music seamlessly integrates 90s house, West African rhythms, UK bass, UK funky, and Southern bass, creating a percussive and dance floor-oriented experience. Tracks like “Fly By” (Nightslugs) and “I Wanna” (Nervous Records) are prime examples of her dynamic sound. Zaida’s genre-spanning influences are also evident in her DJ sets, which have been featured on Rinse, NTS, Dublab, and Reprezent Radio. With a growing presence on the international stage, Zaida has performed in several countries, consistently pushing the boundaries of underground music.
+      </p>
+    </div>
 
-    <!-- Three.js Canvas for the Rotating Logo -->
-   <div>
-    <canvas id="three-canvas" div class="topright"></canvas>
-  </div>
+    <!-- Three.js Canvas Container for the Rotating Logo -->
+    <div class="container">
+      <canvas id="three-canvas"></canvas>
+    </div>
     
-
     <!-- Main JavaScript -->
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
