stashing changes to commit

--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
     
 
     <!-- Main JavaScript -->
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
