--- a/booking.html
+++ b/booking.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Your Site Title</title>
+    <title>YZZ PLANET</title>
     <link rel="stylesheet" href="booking.css">
     <script type="importmap">
       {
