--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Your Site Title</title>
+    <title>ZZ PLANET</title>
     <link rel="stylesheet" href="style.css">
     <script type="importmap">
       {
