--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>YZZ PLANET</title>
-    <link rel="stylesheet" href="booking.css">
+    <link rel="stylesheet" href="/booking.css">
     <script type="importmap">
       {
         "imports": {
