--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>ZZ PLANET</title>
-    <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="/blog.css">
     <script type="importmap">
       {
         "imports": {
